--- a/emotion_prediction/templates/index.html
+++ b/emotion_prediction/templates/index.html
@@ -14,7 +14,7 @@
     <nav>
         <a href=""><img src="{% static 'landing/Logo.jpg'%}" alt="" width="300" height="50" style="margin-left: -125%;"></a>
         <a href="{% url 'home' %}#landing">Home</a>
-        <a href="{% url 'home' %} #about">About</a>
+        <a href="{% url 'home' %}#about">About</a>
         <a href="{% url 'home' %}#team">Team</a>
         <a href="{% url 'home' %}#contact">Contact</a>
         <a class="signup" href="{% url 'register' %}">Sign Up</a>
@@ -107,7 +107,7 @@
 
     <section id="team" class="team">
         <div class="team-page">
-            <center><img class="teamlogo" src="{% static 'landing/Landing_Tean.jpg'%}" alt="" width="600" height="80"></center>
+            <center><img class="teamlogo" src="{% static 'landing/Landing_Team.jpg'%}" alt="" width="600" height="80"></center>
         </div>
         <div class="member-container">
             <div class="member1">
