--- a/emotion_prediction/templates/registration/password_reset_done.html
+++ b/emotion_prediction/templates/registration/password_reset_done.html
@@ -1,30 +1,54 @@
 
-{% load static %}
 
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "css/rs.css" %}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maiden+Orange&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="{% static 'newcss/password_reset_sent.css' %}">
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <div class="form-box">
-            <div class="form-value">
-                <form action="">
-                    <h2>Reset Password</h2>
+    <nav>
+        <a href=""><img src="{% static 'newimg/LLogo.jpg' %}" alt="" width="300" height="50" style="margin-left: -125%;"></a>
+        <a href="{% url 'home' %}#landing">Home</a>
+        <a href="{% url 'home' %} #about">About</a>
+        <a href="{% url 'home' %}#team">Team</a>
+        <a href="{% url 'home' %}#contact">Contact</a>
+        <a class="signup" href="{% url 'login' %}">Log In</a>
+    </nav>
+    <div class="login-container">
+       
+        <div class="login-form">
+            <br>
+            <form method="post">
+                {% csrf_token %}
+                <br>
+                <center>
+                <h2>Reset Password</h2>
+                <br>
                     <div class="inputbox">
                         <p>We've emailed you instructions for setting your password.</p>
                         <p>If you don't receive an email, please make sure you've entered the
                         address you registered with.</p>             
                     </div>
-                    <a href="{% url 'password_reset' %}"><button type="button">Resend Email</button></a>
-
-                </form>
-            </div>
+                </center>
+                <br>
+                <br>
+                <div class="submit" >
+                    <a href="{% url 'password_reset' %}">Resend Email</a>
+                </div>
+                
+                <br>
+            </form>
         </div>
-    </section>
+    </div>
 </body>
 </html>
+
+
+
