--- a/emotion_prediction/templates/registration/password_reset_form.html
+++ b/emotion_prediction/templates/registration/password_reset_form.html
@@ -1,33 +1,50 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "css/rs_form.css" %}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maiden+Orange&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="{% static 'newcss/password_reset.css' %}">
     <title>Document</title>
 </head>
-
 <body>
-    <section>
-        <div class="form-box">
-            <div class="form-value">
-                <form method='POST' action="">
-                    {% csrf_token %}
-                    <h2>Reset <br>Password</h2>
-                    <br>
-                    <br>
-                    <div class="inputbox">
-                       
-                        {{ form.email }} <!-- Use the name of your email field -->
-                        <label for="{{ form.email.id_for_label }}">Email:</label>
-                        <br><br>
-                        <button type="submit">Send</button><br><br>               
-                    </div>
-                </form>
+    <nav>
+        <a href=""><img src="{% static 'newimg/LLogo.jpg' %}" alt="" width="300" height="50" style="margin-left: -125%;"></a>
+        <a href="{% url 'home' %}#landing">Home</a>
+        <a href="{% url 'home' %} #about">About</a>
+        <a href="{% url 'home' %}#team">Team</a>
+        <a href="{% url 'home' %}#contact">Contact</a>
+        <a class="signup" href="{% url 'login' %}">Log In</a>
+    </nav>
+    <div class="login-container">
+        <div class="login-img">
+            <img src="{% static 'newimg/change_pass.png' %}" alt="">
+        </div>
+        <div class="login-form">
+            <br>
+            <form method="post">
+                {% csrf_token %}
+                <center><h2>Enter your Registered Email</h2></center>
+
+                <br>
+                <div class="input">
+                    <input type="email" name="email" placeholder="Email" required>
+                </div>
+                
+                <div class="submit">
+                    <input type="submit" value="Send">
+                </div>
+                <br>
+            </form>
+            <div class="back">
+                <a href="{% url 'login' %}"><i class="bi bi-arrow-left"></i>&nbsp;Back</a>
             </div>
         </div>
-    </section>
+    </div>
 </body>
 </html>
+
+
