--- a/emotion_prediction/static/newcss/login.css
+++ b/emotion_prediction/static/newcss/login.css
@@ -1,103 +1,98 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    /* background-color: #cfdee6; */
-    /* background-image: url(dove.jpg); */
-    background-image:url(../newimg/bg32.png) ;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
-}
-.nav {
-    position: fixed;
+*{
     top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #FEFEFE;
-    border: 1px solid white;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
-    height: 5vh;
-    display:flex;
-    align-items: center; 
-    justify-content: center;
-    
+    bottom: 0;
+    margin: 0;
 }
-
-.nav nav {
+nav{
     display: flex;
-    justify-content: flex-end; 
-}
-
-.nav nav a {
-    text-decoration: none;
-    color: #333; 
-    margin-right: 38px; 
-    font-family: DM Serif Display;
-    font-size: 25px;
-}
-.container {
+    justify-content: flex-end;
+    width: 100%;
+    margin: 0 auto;
+    height: 10vh;
     background-color: #FEFEFE;
     border: 1px solid white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    max-width: 100%; /* Ensures container doesn't exceed viewport width */
-    width: 380px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+    z-index: 997;
+    position: sticky;
+}
+nav a{
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    text-decoration: none;
+    font-family: Roboto Slab;
+    font-size: 20px;
+    color: black;
+}
+.signup{
+    margin-right: 50px;
+    background-color: #EDDB92;
+    border: 2px solid black;
+    width: 100px;
+    height: 5vh;
+    margin-top: 18px;
     border-radius: 10px;
-}
-
-.container .logo {
-    
-    background: #ffffff;
+    display: flex;
     text-align: center;
-    border-radius:10px 10px 0px 0px;
-    
-    
+    justify-content: center;
 }
-.container .logo img {
-    max-width: 100%; /* Ensure the image doesn't exceed the container width */
-    max-height: 450px; /* Set maximum height for the logo */
+body{
+    background-color: #cfdee6;
 }
-.container form{
+.login-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+.login-img img{
+    width: 130%;
+    margin-left: 40%;
+    margin-top: 30%;
+    
+    height: 50vh;
+}
+.login-form{
+    border: 3px solid;
+    width: 25%;
+    margin-left: 25%;
+    margin-top: 9%;
+    background-color: rgba(128, 128, 128, 0.227);
+    border: 1px solid rgba(255, 255, 255, 0.078);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 40px;
+}
+.login-form form{
     padding: 10px;
     height: 100%;
     width: 100%;
 }
-.container form .input {
-    margin: 10px;
+.login-form form .input{
+    margin: 0 auto;
     display: flex;
     width: 100%; /* Adjust width here */
     margin-bottom: 15px;
+    justify-content: center;
 }
-
-.icon{
-    width: 40px;
-    font-size: 35px;
-}
-
-.container form .input input[type="email"],
-.container form .input input[type="text"],
-.container form .input input[type="password"] {
-    width: 70%; /* Adjust width here */
+.login-form .input input[type="email"],
+.login-form .input input[type="password"]{
+    width: 65%; /* Adjust width here */
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 20px;
     font-size: 18px;
+    border: 1px solid rgba(255, 255, 255, 0.078);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-.container form .submit {
+
+.login-form form .submit {
     display: flex;
     justify-content: center;
 }
 
-.container form .submit input[type="submit"] {
+.login-form form .submit input[type="submit"] {
     width: 100%; /* Set initial width to 100% */
     max-width: 120px; /* Set maximum width */
     padding: 10px;
-    background-color: #F9AB55;
+    background-color: #000000;
     color: white;
     border: none;
     border-radius: 5px;
@@ -106,41 +101,179 @@ body {
     font-size: 20px;
 }
 
-.container form .submit input[type="submit"]:hover {
-    background-color: #45a049;
+.login-form form .submit input[type="submit"]:hover {
+    background-color: #EDDB92;
 }
 
-.container form .forgot{
+.login-form form .forgot{
     margin-top:15px;
+    margin-left: 19%;
+    display: flex;
+    justify-content: flex-start;
+}
+.login-form form .forgot a{
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.login-form form .forgot a:hover{
+    color: #EDDB92;
+}
+.login-form form .register{
+    margin: 20px auto;
+    width: 55%;
+    text-align: center;
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+}
+.login-form form .register a{
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+
+}*{
+    top: 0;
+    bottom: 0;
+    margin: 0;
+}
+nav{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    margin: 0 auto;
+    height: 10vh;
+    background-color: #FEFEFE;
+    border: 1px solid white;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+    z-index: 997;
+    position: sticky;
+}
+nav a{
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    text-decoration: none;
+    font-family: Roboto Slab;
+    font-size: 20px;
+    color: black;
+}
+.signup{
+    margin-right: 50px;
+    background-color: #EDDB92;
+    border: 2px solid black;
+    width: 100px;
+    height: 5vh;
+    margin-top: 18px;
+    border-radius: 10px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+body{
+    background-color: #cfdee6;
+}
+.login-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+.login-img img{
+    width: 130%;
+    margin-left: 40%;
+    margin-top: 30%;
+    
+    height: 50vh;
+}
+.login-form{
+    border: 3px solid;
+    width: 25%;
+    margin-left: 25%;
+    margin-top: 9%;
+    background-color: rgba(128, 128, 128, 0.227);
+    border: 1px solid rgba(255, 255, 255, 0.078);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 40px;
+}
+.login-form form{
+    padding: 10px;
+    height: 100%;
+    width: 100%;
+}
+.login-form form .input{
+    margin: 0 auto;
+    display: flex;
+    width: 100%; /* Adjust width here */
+    margin-bottom: 15px;
+    justify-content: center;
+}
+.login-form .input input[type="text"],
+.login-form .input input[type="password"]{
+    width: 65%; /* Adjust width here */
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 18px;
+    border: 1px solid rgba(255, 255, 255, 0.078);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.login-form form .submit {
     display: flex;
     justify-content: center;
 }
-.container form .forgot a{
+
+.login-form form .submit input[type="submit"] {
+    width: 100%; /* Set initial width to 100% */
+    max-width: 120px; /* Set maximum width */
+    padding: 10px;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 20px;
+}
+
+.login-form form .submit input[type="submit"]:hover {
+    background-color: #EDDB92;
+}
+
+.login-form form .forgot{
+    margin-top:15px;
+    margin-left: 19%;
+    display: flex;
+    justify-content: flex-start;
+}
+.login-form form .forgot a{
     text-decoration: none;
-    
+    font-size: 18px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
-.container form .forgot a:hover{
-    color: #F9AB55;
+.login-form form .forgot a:hover{
+    color: #EDDB92;
 }
+.login-form form .register{
+    margin: 20px auto;
+    width: 55%;
+    text-align: center;
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+}
+.login-form form .register a{
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 
-
-
-
-
-
-@media screen and (max-width: 600px) {
-    .container form .submit input[type="submit"] {
-        width: 50%; 
-    }
-    .nav {
-        padding: 10px 10px; /* Adjust padding for smaller screens */
-    }
-    .nav a{
-        margin-right: 10px;
-    }
-
-    .container {
-        width: 90%; /* Adjust container width for smaller screens */
-    }
 }
