--- a/emotion_prediction/templates/emoji.html
+++ b/emotion_prediction/templates/emoji.html
@@ -8,18 +8,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nabla&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maiden+Orange&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'newcss/main.css' %}">
     <title>Document</title>
     
 </head>
 <body>
     <nav>
-        <img src="{% static 'newimg/log.png' %}" alt="">
-        <a class="four" href="{% url 'privhome' %}#hero">Home</a>
-        <a class="four" href="{% url 'privhome' %}#about">About</a>
-        <a class="four" href="{% url 'privhome' %}#team">Team</a>
-        <a href="{% url 'profile' %}" class="profile"><i class="bi bi-person-circle"></i></a>
-        <a class="four" style="margin-left:10px" href="{% url 'home' %}#hero">Log Out</a>
+        <a href=""><img src="{% static 'newimg/LLogo.jpg' %}" alt="" width="300" height="50" style="margin-left: -125%;"></a>
+        <a href="{% url 'home' %}#landing">Home</a>
+        <a href="{% url 'home' %} #about">About</a>
+        <a href="{% url 'home' %}#team">Team</a>
+        <a href="{% url 'home' %}#contact">Contact</a>
+        <a style="font-size:30px" class="signup" href="{% url 'register' %}"><i class="bi bi-person-circle"></i></a>
     </nav>
     
     <main>
@@ -29,25 +31,27 @@
         <div class="container">
             <div class="row justify-content-center mt-5">
                 <div class="col-md-6">
-                    <div class="innput" style="display:flex;margin-left:96%; width:50%;">
-                        <h4 style="margin-left:-40%;font-size:18px;">Select Input: &nbsp; </h4>
-
-                        <div 
-                        style="width:30%;background-color:white;text-align:center;border-radius:10px;z-index:10;"class="input-active">
-                            <a style="text-decoration:none;" href="{% url 'paragraph' %}">Sentece</a>
+                    <div class="innput" style="display:flex; width:150%;height:7vh;margin-left:-25%">
+                        <h4 style="font-size:40px;font-family:Maiden Orange;">How Would You Like EMOJI-ON to predict? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
+                        
+                        <div style="width:20%; background-color:white; text-align:center; border-radius:10px; z-index:10;display: flex; justify-content: center; align-items: center;" class="input-active">
+                            <a style="text-decoration:none;font-size:20px;color:black;font-family: DM Serif Display;" href="{% url 'paragraph' %}">PARAGRAPH</a>
                         </div>
-                        <div class="input-nonactive">
-                            <a style="text-decoration:none;" href="{% url 'whole' %}">Whole Story</a>
+                        
+                        <div class="input-nonactive" style="width:20%;  text-align:center; border-radius:10px; z-index:10;display: flex; justify-content: center; align-items: center;">
+                            <a style="text-decoration:none;color:black;font-family: DM Serif Display;" href="{% url 'whole' %}">WHOLE </a>
                         </div> 
                     </div>
-                    
-					{{ form.story }}						
-					<input style="color: rgb(0, 0, 0);" class="analyze-btn"  name="analyze" id="analyze" type="submit" value="Analyze">
+                    <br>
+					{{ form.story }}	
+                    <div class="analyze">
+					<input style="color: rgb(0, 0, 0); border:3px solid;" class="analyze-btn"  name="analyze" id="analyze" type="submit" value="Analyze">
+                    </div>
                 </div>
             </div>
         </div>
         </form>
-        <center><hr style="border: solid;width:80%"></center>
+        <br>
         <div class="emotions">
             <div class="container text-center">
                 <div class="row">
@@ -75,22 +79,22 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col">
-                        &nbsp; &nbsp; &nbsp;<img src="{% static 'newimg/happy.png' %}" alt="">
+                        &nbsp; &nbsp; &nbsp;<img src="{% static 'newimg/1.png' %}" alt="">
                     </div>
                     <div class="col">
-                        &nbsp; &nbsp; <img src="{% static 'newimg/sad.png' %}" alt="">
+                        &nbsp; &nbsp; <img src="{% static 'newimg/2.png' %}" alt="">
                     </div>
                     <div class="col">
-                        <img src="{% static 'newimg/fear.png' %}" alt="">
+                        <img src="{% static 'newimg/3.png' %}" alt="">
                     </div>
                     <div class="col">
-                        <img src="{% static 'newimg/angry.png' %}" alt="">
+                        <img src="{% static 'newimg/4.png' %}" alt="">
                     </div>
                     <div class="col">
-                        <img src="{% static 'newimg/disgust.png' %}" alt="">
+                        <img src="{% static 'newimg/5.png' %}" alt="">
                     </div>
                     <div class="col">
-                        <img src="{% static 'newimg/surprise.png' %}" alt="">
+                        <img src="{% static 'newimg/6.png' %}" alt="">
                     </div>
                 </div>
             </div>
@@ -142,25 +146,22 @@
             </div>
             {% endif %}
         </div>
-        <div class="container">
-            <div class="row justify-content-center mt-5">
-                <div class="col-md-4">
+        <div class="container" style="margin-top:-2%;">
+            <div class="row justify-content-flex-start mt-5" style="">
+                <div class="col-md-4" style="width:36%;margin-left:14%;">
                     <h3>Emotion Predicted: {{ analyzed_story.analyzed_emotion }}</h3>
                 </div>
             </div>
-        </div>
-        <div class="download" style=" width:19%;margin:-12px auto;" >
-            {% if analyzed_story %}
-                <p >To download the result,click<i class="bi bi-arrow-right"></i><a style="text-decoration:none;" href="{% url 'download-result' %}">Download</button></a> </p>
-            {% endif %}
+            <div class="download" style="display:flex;width:20%;margin-top:-70px;margin-left:70%" >
+                {% if analyzed_story %}
+                <a style="border:1px solid; width:18%;height:6vh;text-align:center;align-items:center;background-color:white;border-radius:50%;" href="{% url 'download-result' %}">
+                    <i class="bi bi-box-arrow-down downloadd"></i></a><p style="font-size:25px">Download Result</p>
+                {% endif %}
+            </div>
         </div>
     </main>
     
     
-<br>
-    <footer>
-        <p>&copy;EMOJI-ON || 2024</p>
-    </footer>
-	
+
 </body>
 </html>
