--- a/emotion_prediction/templates/logiin.html
+++ b/emotion_prediction/templates/logiin.html
@@ -4,43 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maiden+Orange&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nabla&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'newcss/login.css' %}">
     <title>Document</title>
 </head>
 <body>
-    <div class="nav">
-        <nav>
-            <img src="" alt="">
-            <a href="{% url 'home' %}#hero">Home</a>
-            <a href="{% url 'home' %}#about">About</a>
-            <a href="{% url 'home' %}#contact">Contacts</a>
-            <a href="{% url 'home' %}#team">Team</a>
-            <a href="{% url 'register' %}">Sign Up</a>
-        </nav>
-    </div>
-    <div class="container">
-        <center><div class="logo"><img src="{% static 'newimg/log.png' %}" alt="" style="width:80%; "></div></center>
+    <nav>
+        <a href=""><img src="{% static 'newimg/LLogo.jpg' %}" alt="" width="300" height="50" style="margin-left: -125%;"></a>
+        <a href="{% url 'home' %}#landing">Home</a>
+        <a href="{% url 'home' %} #about">About</a>
+        <a href="{% url 'home' %}#team">Team</a>
+        <a href="{% url 'home' %}#contact">Contact</a>
+        <a class="signup" href="{% url 'register' %}">Sign Up</a>
+    </nav>
+    <div class="login-container">
+        <div class="login-img">
+            <img src="{% static 'newimg/login.png' %}" alt="">
+        </div>
+        <div class="login-form">
+            <br>
+            <form method="post">
+                {% csrf_token %}
+                <div class="input">
+                    <input type="text" name="username" placeholder="Username" required>
+                </div>
+                <br>
+                <div class="input">
+                    <input type="password" name="password" placeholder="Password" required>
+                </div>
+                <div class="forgot">
+                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
+                </div>
+                <br>
+                <div class="submit">
+                    <input type="submit" value="LOG IN">
+                </div>
+                <br>
+                <center><hr style="border:2px solid;width:80%;color:white"></center>
+                <div class="register">
+                    <a href="{% url 'register' %}">CREATE AN ACCOUNT</a>
+                </div>
 
-        <form method="POST" action="">
-          {% csrf_token %}
-            <div class="input">
-                <i class="bi bi-person-circle icon"></i>&nbsp;
-                <input style="width: 70%;padding: 10px;border-radius: 5px;font-size: 18px;" 
-                type="text" name="username" placeholder="Username" required>
-            </div>
-            <div class="input">
-                <i class="bi bi-file-lock2 icon"></i>&nbsp;
-                <input type="password" name="password" placeholder="Password" required>
-            </div>
-            <div class="submit">
-                <input type="submit" value="Log In">
-            </div>
-            <div class="forgot">
-                <a href="{% url 'password_reset' %}">Forgot Password</a>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </body>
 </html>
