--- a/emotion_prediction/templates/registration/password_reset_complete.html
+++ b/emotion_prediction/templates/registration/password_reset_complete.html
@@ -1,34 +1,38 @@
-
-
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "css/rs.css" %}">
-    <title>Reset Password</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maiden+Orange&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="{% static 'newcss/done.css' %}">
+    <title>Document</title>
 </head>
-<style>
-    p{
-        text-align:center;
-    }
-</style>
-
 <body>
-    <section>
-        <div class="form-box">
-            <div class="form-value">
-                <form method="post" action="">
-                    {% csrf_token %}
-                    <h2>Password set</h2>
-
-                    <p>Your password has been set.  <a href="{% url "login" %}"><button type="submit">Log in</button></a></p>
-
-                </form>
-            </div>
+    <nav>
+        <a href=""><img src="{% static 'newimg/LLogo.jpg' %}" alt="" width="300" height="50" style="margin-left: -125%;"></a>
+        <a href="{% url 'home' %}#landing">Home</a>
+        <a href="{% url 'home' %} #about">About</a>
+        <a href="{% url 'home' %}#team">Team</a>
+        <a href="{% url 'home' %}#contact">Contact</a>
+        <a class="signup" href="{% url 'login' %}">Log In</a>
+    </nav>
+    <div class="login-container">
+        <div class="login-img">
+            <img src="{% static 'newimg/change_pass.png' %}" alt="">
         </div>
-    </section>
+        <div class="login-form">
+            <br>
+            <center>
+                <h3 style="font-size:40px;">Password reset success</h3> <br>
+                <div class="submit"  style="border:1px solid;width:30%;height:5vh; display:flex;justify-content:center;text-align:center;align-items:center;border-radius:10px;background-color:black;">
+                    <a style="text-decoration:none;color:white;font-size:20px" href="{% url 'login' %}">LOG IN</a>
+                </div>
+            </center>
+
+        </div>
+    </div>
 </body>
 </html>
