--- a/emotion_prediction/templates/registration/password_reset_confirm.html
+++ b/emotion_prediction/templates/registration/password_reset_confirm.html
@@ -1,44 +1,62 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "css/rs.css" %}">
-    <title>Reset Password</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maiden+Orange&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="{% static 'newcss/password_reset.css' %}">
+    <title>Document</title>
 </head>
-
 <body>
-    <section>
-        <div class="form-box">
-            <div class="form-value">
-                <form method="post" action="">
-                    {% csrf_token %}
-                    <h2>Reset Your Password</h2>
-
-                    {% if validlink %}
-                        <div class="inputbox">
-                            <label for="{{ form.new_password1.id_for_label }}">New Password</label>
-                            <br><br>
-                            {{ form.new_password1 }}
-                        </div>
-                        
-                        <div class="inputbox">
-                            <label for="{{ form.new_password2.id_for_label }}">Confirm Password</label>
-                            <br><br>
-                            {{ form.new_password2 }}
-                        </div>
-                        <br><br>
-                    {% else %}
-                        <p style=" text-align: center;">The password reset link was invalid, <br>possibly because it has
-                        already been used. <br>Please request a new password reset.</p>
-                    {% endif %}
-
-                    <button type="submit">Update</button><br><br>
-                </form>
-            </div>
+    <nav>
+        <a href=""><img src="{% static 'newimg/LLogo.jpg' %}" alt="" width="300" height="50" style="margin-left: -125%;"></a>
+        <a href="{% url 'home' %}#landing">Home</a>
+        <a href="{% url 'home' %} #about">About</a>
+        <a href="{% url 'home' %}#team">Team</a>
+        <a href="{% url 'home' %}#contact">Contact</a>
+        <a class="signup" href="{% url 'login' %}">Log In</a>
+    </nav>
+    <div class="login-container">
+        <div class="login-img">
+            <img src="{% static 'newimg/change_pass.png' %}" alt="">
         </div>
-    </section>
+        <div class="login-form">
+            <br>
+            <form method="post">
+                {% csrf_token %}
+                <center><h2>Reset Your Password</h2></center>
+                <br>
+
+                {% if validlink %}
+                    <div class="input">
+                        
+                    <input type="password" name="new_password1" placeholder="New Password" required>
+                    </div>
+                    
+                    <div class="input">
+                        
+                        <input type="password" name="new_password2" placeholder="Re-type Password" required>
+                    </div>
+                    
+                    <div class="submit">
+                        <input type="submit" value="UPDATE NOW">
+                    </div>
+                    <br><br>
+                {% else %}
+                    <p style=" text-align: center;">The password reset link was invalid, <br>possibly because it has
+                    already been used. <br>Please request a new password reset.</p>
+                {% endif %}
+            </form>
+            
+        </div>
+    </div>
 </body>
 </html>
+
+
+
+
+
