--- a/emotion_prediction/templates/sign_up.html
+++ b/emotion_prediction/templates/sign_up.html
@@ -1,206 +1,64 @@
-{% comment %} 
-
-{% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      
-        <title>Home - Append Bootstrap Temlate</title>
-        <meta content="" name="description">
-        <meta content="" name="keywords">
-      
-      
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com" rel="preconnect">
-        <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-      
-        <!-- Vendor CSS Files -->
-        <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css'%} " rel="stylesheet">
-        <link href="{% static  'assets/vendor/swiper/swiper-bundle.min.css '%}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
-        
-      
-        <!-- Template Main CSS File -->
-        <link href=" {% static 'assets/css/main.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="{% static "css/sign_up.css" %}">
-      
-      
-        <!-- =======================================================
-        * Template Name: Append
-        * Updated: Sep 18 2023 with Bootstrap v5.3.2
-        * Template URL: https://bootstrapmade.com/append-bootstrap-website-template/
-        * Author: BootstrapMade.com
-        * License: https://bootstrapmade.com/license/
-        ======================================================== -->
-      </head>
-      
-      <body class="index-page" data-bs-spy="scroll" data-bs-target="#navmenu">
-      
-        <!-- ======= Header ======= -->
-        <header id="header" class="header fixed-top d-flex align-items-center">
-          <div class="container-fluid d-flex align-items-center justify-content-between">
-            <a style=" align-items: start;"href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
-              <img src="{% static 'assets/img/icon.png' %}">
-                  <h3 style="font-family: Palace Script MT; font-size: 40px;">Emotion-On</h3>
-                 
-                </a>
-          
-      <br>
-            <!-- Nav Menu -->
-            <nav id="navmenu" class="navmenu">
-                <ul >
-                <li><a href="{% url 'home' %}#hero" class="active">Home</a></li>
-                <li><a href="{% url 'home' %}#about">About</a></li>
-                <li><a href="{% url 'home' %}#team">Team</a></li>
-                <li><a href="{% url 'home' %}#contact">Contact</a></li>
-                      <li><a href="{% url 'login' %}">Login</a></li>
-                      
-                </ul>
-      
-              <i class="mobile-nav-toggle "></i>
-            </nav><!-- End Nav Menu -->
-          </div>
-        </header>
-
-<body>
-    <section style="padding-top: 130px;">
-        
-        <div class="form-box">
-            {% if not success %}
-                <h5 style="color: white;">CREATE AN ACCOUNT</h5>
-            {% endif %}
-            <div class="form-value">
-                {% if messages %}
-                <div class="message-container">
-                    {% for message in messages %}
-                        {% if message.tags and message.tags == 'error' %}
-                            <div class="alert alert-danger" role="alert">
-                                <strong>Error:</strong> {{ message }} 
-                            </div>
-                        {% else %}
-                            <div class="alert alert-success" role="alert">
-                            {{ message }}
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-
-                </div>
-                {% endif %}
-
-                {% if success %}
-                    <center><a href="{% url 'login' %}" class="btn btn-primary shadow-2 mb-4">Sign IN</a></center>
-                {% else %}
-                    <form method="post" action="{% url 'register' %}">
-                        {% csrf_token %}
-                        
-                        <div class="inputbox">
-                            <span style="font-size: 3px;">{{ form.last_name }}</span>    
-                        <!-- <input type="text" style="font-size: 15px;" id="lastname" name="last_name" placeholder="Last Name"required> -->
-                        </div>
-                        <span>{{ form.last_name.errors }}</span>
-                        <div class="inputbox">
-                            <span style="font-size: 3px;">{{ form.first_name }}</span>
-                            <!-- <input type="text" style="font-size: 15px;" id="firstname" name="first_name" placeholder="First Name" required> -->
-                        </div>
-                        <span>{{ form.first_name.errors }}</span>
-                        <div class="inputbox">
-                            <span style="font-size: 3px;">{{ form.username }}</span>
-                            <!-- <input type="text" style="font-size: 15px;" id="username" name="username" placeholder="Username" required> -->
-                        </div>
-                        <span>{{ form.username.errors }}</span>
-                        <div class="inputbox">
-                            <span style="font-size: 3px;">{{ form.email }}</span>
-                            <!-- <input type="email" style="font-size: 15px;" id="email" name="email" placeholder="Email" required> -->
-                        </div>
-                        <span>{{ form.email.errors }}</span>
-                        <div class="inputbox">
-                            <span style="font-size: 3px;">{{ form.password }}</span>    
-                            <!-- <input type="password" style="font-size: 15px;" id="password" name="password" placeholder="Password" minlength="8" required> -->
-                        </div>
-                        <span>{{ form.password.errors }}</span>
-                        <div class="inputbox">
-                            <span style="font-size: 3px;">{{ form.confirm_password }}</span>
-                            <!-- <input type="password" style="font-size: 15px;" id="confirm_password" name="confirm_password" placeholder="Retype Password"minlength="8" required> -->
-                        </div>
-                        <span>{{ form.confirm_password.errors }}</span>
-                        <button type="submit" name="register">Sign Up</button><br><br>
-                            
-                        <center><h6><a href="{% url 'login'%}">have an account. Sign in</a></h6></center>
-                
-                    </form>
-                {% endif %}
-            </div>
-        </div>
-    </section>
-</body>
-</html> {% endcomment %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maiden+Orange&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nabla&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'newcss/signup.css' %}">
     <title>Document</title>
 </head>
 <body>
-    <div class="nav">
-        <nav>
-            <img src="" alt="">
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Contacts</a>
-            <a href="">Team</a>
-            <a href="{% url 'login' %}">Log In</a>
-        </nav>
-    </div>
-    <div class="container">
-        <center><div class="logo"><img src="{% static "newimg/log.png" %}" alt="" style="width:80%;"></div></center>
+    <nav>
+        <a href=""><img src="{% static 'newimg/LLogo.jpg' %}" alt="" width="300" height="50" style="margin-left: -125%;"></a>
+        <a href="{% url 'home' %}#landing">Home</a>
+        <a href="{% url 'home' %} #about">About</a>
+        <a href="{% url 'home' %}#team">Team</a>
+        <a href="{% url 'home' %}#contact">Contact</a>
+        <a class="signup" href="{% url 'login' %}"> Log In</a>
+    </nav>
+    <div class="login-container">
+        <div class="login-img">
+            <img src="{% static 'newimg/register.png' %}" alt="">
+        </div>
+        <div class="login-form">
+            <br>
+            <form method="post">
+                {% csrf_token %}
+                <div class="input">
+                    <input type="text" name="last_name" placeholder="Last Name" required>
+                </div>
+                <div class="input">
+                    <input type="text" name="first_name" placeholder="First Name" required>
+                </div>
+                <div class="input">
+                    <input type="text" name="username" placeholder="Username" required>
+                </div>
+                
+                <div class="input">
+                    <input type="email" name="email" placeholder="Email" required>
+                </div>
+                
+                <div class="input">
+                    <input type="password" name="password" placeholder="Password" required>
+                </div>
+                <div class="input">
+                    <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+                </div>
+                <div class="forgot">
+                    <p>Already have an Account?&nbsp;<a style="font-weight:bold;" href="{% url 'login' %}">Log In</a></p>
+                </div>
+                <br>
+                <div class="submit">
+                    <input type="submit" name="register" value="SIGN UP">
+                </div>
+                <br>
+                
 
-        <form method="post" action="{% url 'register' %}">
-            {% csrf_token %}
-            
-            <div class="input">
-                <i class="bi bi-person-vcard icon"></i></i>&nbsp;
-
-                <input type="text" id="lastname" name="last_name" placeholder="Last Name">
-            </div>
-            <div class="input">
-                <i class="bi bi-person-vcard icon"></i></i>&nbsp;
-
-                <input type="text" id="firstname" name="first_name" placeholder="First Name">
-            </div>
-            <div class="input">
-                <i class="bi bi-person icon"></i>&nbsp;
-                <input type="text" id="username" name="username" placeholder="Username">
-            </div>
-            <div class="input">
-                <i class="bi bi-envelope icon"></i>&nbsp;
-                <input type="Email" id="email" name="email" placeholder="Email">
-            </div>
-            <div class="input">
-                <i class="bi bi-shield-lock icon"></i>
-                <input type="password" id="password" name="password" placeholder="Password">
-            </div>
-            <div class="input">
-                <i class="bi bi-key icon"></i>
-                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password">
-            </div>
-            <div class="submit">
-                <input type="submit" name="register" value="Sign Up">
-            </div>
-            <div class="forgot">
-                <p>Already have an account?&nbsp; </p><a href="{% url 'login'%}">Log In</a>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </body>
 </html>
